# QuadProgpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.hh.in
cmake/: config.hh.in
matlab_octave/: Makefile  config.hh  make.m  mexopts.sh  qppp_test.m  quadprogpp.m  quadprogpp_interface.cpp  test.m
src/: Array.cc  Array.hh  ArrayHelpers.hh  CMakeLists.txt  EigenHelpers.hh  QuadProg++.cc  QuadProg++.hh  main.cc
